 Open Firm Accounting - NEWS

 Summary
 =======
 
   Version 0.70
   Version 0.69
   Version 0.68
   Version 0.67
   Version 0.66
   Version 0.65
   Version 0.64

-----------------------------------------------------------------------
 Version 0.70
 ============

 Released on 

 Total files count:
 Total lines count:
 maintainer/run-distcheck.sh:

 New features and improvements:

   - Exportable standard class format is reviewed (todo #1351).
   - Exporters can provide their own stream format (todo #1411).
   - Main window has a new 'minimal' display mode.
   - Operation template properties: fields are not masked by the scrollbar (todo #1457).
   - Plugins now advertize their DB model with their canonical name (todo #1461).
   - Recurrent operation is not generated is its first amount is zero (todo #1459).
   - Recurrent operation validation is now said 'accounting' (todo #1460).
   - Restore assistant let the user display the metadata of the archive (todo #1450).

 Bug fixes:

   - configure.ac: display 'pwirender' plugin build status (todo #1453).
   - ofaEntryStore: fix ENT_TIERS column type.
   - ofaGuidedInputBin: do not override a user-set date when setting a template (todo #1456). 
   - ofaMainWindow: better switch back from 'minimal' display mode.
   - Fix conversion to DBModel v37 of OFA_T_BAT table.
   - ofaRecurrentRunTreeview: fix refresh bug when cancelling operations.
   - ofoEntry: fix export format for unset counters.

 Other changes:

   - ofaBackupDisplay: new class.
   - ofaIExportable::get_basename(): new method.
   - ofaIExportable::get_published(): new method.
   - ofaIExporter: new interface.
   - ofaIRenderer: interface is completed with font and color getters (todo #1452).
   - ofaRecurrentModelPage: precise the action label (todo #1458). 
   - ofaStreamFormat: is now able to define which fields are user-updatable.
   - core/ofo-entry-fec.{c,h}: new files.

-----------------------------------------------------------------------